[SR-426][Runtime] Use _fail to ensure src is deallocated in cast

This case was previously ignoring the DestroyOnFailure flag, so
we had a leak if a cast to an existential metatype failed for
certain types (tuples, structs, etc).